[bug] change group button overflow

--- a/app/assets/stylesheets/app.buttons.scss
+++ b/app/assets/stylesheets/app.buttons.scss
@@ -77,6 +77,13 @@
   animation:spin 4s linear infinite;
 }
 
+.btn-no-overflow {
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
